# pixie

./: BUILD.bazel
bazel/: container_images.bzl
charts/px-pem/: Chart.yaml  README.md  values.yaml
charts/px-pem/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  daemonset.yaml  serviceaccount.yaml
src/experimental/standalone_pem/: BUILD.bazel  local_k8s_update_receiver.h  local_k8s_update_server.cc  local_k8s_update_server.h  standalone_pem_manager.cc  standalone_pem_manager.h
src/experimental/standalone_pem/watcher/: BUILD.bazel  main.go
